src/core/export/interface.h

// Typedef for boolean value (since the standard doesn't specify
// its size
typedef uint32_t Boolean;
typedef enum {
	RENDERER_CPU_PT,
	RENDERER_GPU_PT,
	RENDERER_COUNT
} RendererType;
typedef enum {
	TARGET_RADIANCE,
	TARGET_POSITION,
	TARGET_ALBEDO,
	TARGET_NORMAL,
	TARGET_LIGHTNESS,
	TARGET_COUNT
} RenderTarget;
typedef enum {
	PROFILING_NONE,
	PROFILING_LOW,
	PROFILING_HIGH,
	PROFILING_ALL,
} ProfilingLevel;
// Renderer parameter data
enum ParameterType {
	PARAM_INT,
	PARAM_FLOAT,
	PARAM_BOOL
};
// TODO: interface for envmap light

// Interface for rendering
CORE_API Boolean CDECL render_enable_renderer(RendererType type);
CORE_API Boolean CDECL render_iterate();
CORE_API Boolean CDECL render_reset();
// TODO: what do we pass to the GUI?
CORE_API Boolean CDECL render_save_screenshot(const char* filename);
CORE_API Boolean CDECL render_enable_render_target(RenderTarget target, Boolean variance);
CORE_API Boolean CDECL render_disable_render_target(RenderTarget target, Boolean variance);
CORE_API Boolean CDECL render_enable_variance_render_targets();
CORE_API Boolean CDECL render_enable_non_variance_render_targets();
CORE_API Boolean CDECL render_enable_all_render_targets();
CORE_API Boolean CDECL render_disable_variance_render_targets();
CORE_API Boolean CDECL render_disable_non_variance_render_targets();
CORE_API Boolean CDECL render_disable_all_render_targets();
CORE_API uint32_t CDECL renderer_get_num_parameters();
CORE_API const char* CDECL renderer_get_parameter_desc(uint32_t idx, ParameterType* type);
CORE_API Boolean CDECL renderer_set_parameter_int(const char* name, int32_t value);
CORE_API Boolean CDECL renderer_get_parameter_int(const char* name, int32_t* value);
CORE_API Boolean CDECL renderer_set_parameter_float(const char* name, float value);
CORE_API Boolean CDECL renderer_get_parameter_float(const char* name, float* value);
CORE_API Boolean CDECL renderer_set_parameter_bool(const char* name, Boolean value);
CORE_API Boolean CDECL renderer_get_parameter_bool(const char* name, Boolean* value);
// Interface for profiling
CORE_API void CDECL profiling_enable();
CORE_API void CDECL profiling_disable();
CORE_API Boolean CDECL profiling_set_level(ProfilingLevel level);
CORE_API Boolean CDECL profiling_save_current_state(const char* path);
CORE_API Boolean CDECL profiling_save_snapshots(const char* path);
CORE_API Boolean CDECL profiling_save_total_and_snapshots(const char* path);
CORE_API const char* CDECL profiling_get_current_state();
CORE_API const char* CDECL profiling_get_snapshots();
CORE_API const char* CDECL profiling_get_total_and_snapshots();
CORE_API void CDECL profiling_reset();
CORE_API size_t CDECL profiling_get_total_cpu_memory();
CORE_API size_t CDECL profiling_get_free_cpu_memory();
CORE_API size_t CDECL profiling_get_used_cpu_memory();
CORE_API size_t CDECL profiling_get_total_gpu_memory();
CORE_API size_t CDECL profiling_get_free_gpu_memory();
CORE_API size_t CDECL profiling_get_used_gpu_memory();
// Interface for initialization and destruction
CORE_API Boolean CDECL mufflon_initialize(void(*logCallback)(const char*, int));
CORE_API int32_t CDECL mufflon_get_cuda_device_index();
CORE_API Boolean CDECL mufflon_is_cuda_initialized();
CORE_API void CDECL mufflon_destroy();